--- a/docRefs.bib
+++ b/docRefs.bib
@@ -6,10 +6,10 @@
 	url = {https://dx.doi.org/10.1016/j.aim.2014.03.003},
 	doi = {10.1016/j.aim.2014.03.003},
 	pages = {351--396},
-	journaltitle = {Advances in Mathematics},
+	journal = {Advances in Mathematics},
 	author = {Lack, Stephen and Street, Ross},
-	date = {2014},
-	note = {Publisher: Elsevier {BV}},
+	year = {2014},
+	publisher = {Elsevier},
 	file = {Lack-2014-Triangulations-orientals-and-skew-m:/Users/wanchengsyuan/Zotero/storage/GD629YAN/Lack-2014-Triangulations-orientals-and-skew-m.pdf:application/pdf}
 }
 
@@ -33,6 +33,7 @@
   booktitle={Joachim Lambek: The Interplay of Mathematics, Logic, and Linguistics},
   pages={377--406},
   year={2021},
+  doi = {https://doi.org/10.1007/978-3-030-66545-6_11},
   publisher={Springer}
 }
 
@@ -40,13 +41,14 @@
 	title = {Skew-monoidal categories and bialgebroids},
 	volume = {231},
 	issn = {0001-8708},
+  journal = {Advances in Mathematics},
 	url = {https://dx.doi.org/10.1016/j.aim.2012.06.027},
 	doi = {10.1016/j.aim.2012.06.027},
 	pages = {1694--1730},
-	number = {3},
+	number = {3-4},
 	author = {Szlachányi, Kornél},
-	date = {2012},
-	note = {Publisher: Elsevier {BV}},
+	year = {2012},
+	publisher = {Elsevier},
 	file = {Szlachanyi-2012-Skew-monoidal-categories-and-bialge:/Users/wanchengsyuan/Zotero/storage/XJ9UHVH9/Szlachanyi-2012-Skew-monoidal-categories-and-bialge.pdf:application/pdf}
 }
 
@@ -110,7 +112,7 @@
                James Chapman and
                Tarmo Uustalu},
   title     = {Monads need not be endofunctors},
-  journal   = {Log. Methods Comput. Sci.},
+  journal   = {Logical Methods in Computer Science},
   volume    = {11},
   number    = {1},
   year      = {2015},
@@ -139,16 +141,16 @@
 	title = {Eilenberg-Kelly Reloaded},
 	volume = {352},
 	issn = {1571-0661},
-	url = {http://www.sciencedirect.com/science/article/pii/S1571066120300633},
+	url = {https://doi.org/10.1016/j.entcs.2020.09.012},
 	doi = {10.1016/j.entcs.2020.09.012},
 	series = {The 36th Mathematical Foundations of Programming Semantics Conference, 2020},
 	abstract = {The Eilenberg-Kelly theorem states that a category C with an object I and two functors ⊗:C×C→C and ⊸:Cop×C→C related by an adjunction −⊗B⊣B⊸− natural in B is monoidal iff it is closed and moreover the adjunction holds internally. We dissect the proof of this theorem and observe that the necessity for a side condition on closedness arises because the standard definition of closed category is left-skew in regards to associativity. We analyze Street's observation that left-skew monoidality is equivalent to left-skew closedness and establish that monoidality is equivalent to closedness unconditionally under an adjusted definition of closedness that requires normal associativity. We also work out a definition of right-skew closedness equivalent to right-skew monoidality. We give examples of each type of structure; in particular, we look at the Kleisli category of a left-strong monad on a left-skew closed category and the Kleisli category of a lax closed monad on a right-skew closed category. We also view skew and normal monoidal and closed categories as special cases of skew and normal promonoidal categories and take a brief look at left-skew prounital-closed categories.},
 	pages = {233--256},
-	journaltitle = {Electronic Notes in Theoretical Computer Science},
+	journal = {Electronic Notes in Theoretical Computer Science},
 	author = {Uustalu, Tarmo and Veltri, Niccol{\`o} and Zeilberger, Noam},
 	urldate = {2020-12-24},
-	date = {2020-10-01},
-	langid = {english},
+	year = {2020},
+	publisher={Elsevier},
 	keywords = {closed, Eilenberg-Kelly theorem, Kleisli construction, monoidal closed and bi-closed categories, promonoidal categories, skew and normal monoidal},
 	file = {Uustalu et al. - 2020 - Eilenberg-Kelly Reloaded.pdf:/Users/wanchengsyuan/Zotero/storage/AKHMNT6B/Uustalu et al. - 2020 - Eilenberg-Kelly Reloaded.pdf:application/pdf;ScienceDirect Snapshot:/Users/wanchengsyuan/Zotero/storage/F5R3KS9T/S1571066120300633.html:text/html}
 }
@@ -156,22 +158,24 @@
 @article{uustalu:deductive:nodate,
 	title = {Deductive Systems and Coherence for Skew Prounital Closed Categories},
 	volume = {332},
-	url = {https://cgi.cse.unsw.edu.au/~eptcs/paper.cgi?LFMTP2020:17},
+	url = {https://arxiv.org/pdf/2101.03809v1.pdf},
 	pages = {35--53},
-	journaltitle = {{EPTCS}},
+	journal = {Electronic Notes in Theoretical Computer Science},
 	author = {Uustalu, Tarmo and Veltri, Niccol{\`o} and Zeilberger, Noam},
 	urldate = {2020-12-24},
+  year = {2020},
 	file = {Uustalu et al. - Deductive Systems and Coherence for Skew Prounital.pdf:/Users/wanchengsyuan/Zotero/storage/X5E9XJD8/Uustalu et al. - Deductive Systems and Coherence for Skew Prounital.pdf:application/pdf;Snapshot:/Users/wanchengsyuan/Zotero/storage/9KYPPGSQ/paper.html:text/html}
 }
 
 @article{uustalu:proof:nodate,
 	title = {Proof Theory of Partially Normal Skew Monoidal Categories},
 	volume = {333},
-	url = {https://cgi.cse.unsw.edu.au/~eptcs/paper.cgi?ACT2020:60},
+	url = {http://dx.doi.org/10.4204/EPTCS.333.16},
 	pages = {230--246},
-	journaltitle = {{EPTCS}},
+	journal = {Electronic Notes in Theoretical Computer Science},
 	author = {Uustalu, Tarmo and Veltri, Niccol{\`o} and Zeilberger, Noam},
 	urldate = {2020-12-24},
+  year = {2020},
 	file = {Uustalu et al. - Proof Theory of Partially Normal Skew Monoidal Cat.pdf:/Users/wanchengsyuan/Zotero/storage/BC4BL4NP/Uustalu et al. - Proof Theory of Partially Normal Skew Monoidal Cat.pdf:application/pdf;Snapshot:/Users/wanchengsyuan/Zotero/storage/UVW2FYNM/paper.html:text/html}
 }
 
@@ -186,7 +190,7 @@
 	publisher = {Springer},
 	author = {Eilenberg, Samuel and Kelly, G. Max},
 	editor = {Eilenberg, S. and Harrison, D. K. and {MacLane}, S. and Röhrl, H.},
-	date = {1966},
+	year = {1966},
 	langid = {english},
 	keywords = {Monoidal Category, Monoidal Structure, Follow Diagram Commute, Natural Isomorphism, Natural Transformation},
 	file = {Eilenberg and Kelly - 1966 - Closed Categories.pdf:/Users/wanchengsyuan/Zotero/storage/PMSS6J3A/Eilenberg and Kelly - 1966 - Closed Categories.pdf:application/pdf}
@@ -440,10 +444,10 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	abstract = {Spurred by the new examples found by Kornel Szlachányi of a form of lax monoidal category, the author felt the time ripe to publish a reworking of Eilenberg and Kelly’s original paper on closed categories appropriate to the laxer context. The new examples are connected with bialgebroids. In a separate paper with Stephen Lack, we have also used the concept to give an alternative definition of quantum category and quantum groupoid. Szlachányi has called the lax notion skew monoidal. This paper defines skew-closed category, proves Yoneda lemmas for categories enriched over such, and looks at closed cocompletion.},
 	pages = {973--988},
 	number = {6},
-	journaltitle = {Journal of Pure and Applied Algebra},
+	journal = {Journal of Pure and Applied Algebra},
 	author = {Street, Ross},
 	urldate = {2021-03-18},
-	date = {2013-06-01},
+	year = {2013},
 	langid = {english},
 	file = {Street - 2013 - Skew-closed categories.pdf:/Users/wanchengsyuan/Zotero/storage/2XY9B2BB/Street - 2013 - Skew-closed categories.pdf:application/pdf;ScienceDirect Snapshot:/Users/wanchengsyuan/Zotero/storage/CDYEFFAY/S0022404912002964.html:text/html}
 }
@@ -885,10 +889,10 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	abstract = {The deep symmetry of linear logic [18] makes it suitable for providing abstract models of computation, free from implementation details which are, by nature, oriented and non-symmetrical. I propose here one such model, in the area of logic programming, where the basic computational priciple {isComputation} = Proof {searchProofs} cinsidered here are those of the Gentzen style sequent calculus for linear logic. However, proofs in this system may be redundant, in that two proofs canbe syntactically different although identical up to some irrelevant reordering or simplification of the applications of the inferences rules. This leads to an untractable proof search where the search procedure is forced to make costly choices whch turn out to be irrelevant. To overcome this problem, a subclass of proofs, called the ‘focusing’ proofs, which is both complete (any derivable formla in linear logic has a focusing proof) and tractable (many irrelevant choices in the search are eliminated when aimed at focusing proofs) is identified. The main constraint underlying the specificatuon of focusing proofs has been to preserve the symmetry of linear logic, which is its most salient feature. In particular, dual connectives have dual properties with respect to focusing {proofsThen}, a progrmming language, called {LinLog}, consisting of a fragment of linear logic, in which focussing proofs have a more compact form, is presented. Linlog deals with formulae which have a syntax similar to the of the definite clauses and goals of Horn logic, but the crucial difference here is that it allows clauses with multiple atoms in the head, connected by the ‘par’ (multiplicative disjuction). It is then shown that the syntyactic restriction induced by {LinLog} is not performed at the cost of any expressive power: a mapping from full linear logic to {LinLog}, preserving focusing proofs, and analogous to the normalization to clausal form for classical logic, is presented.},
 	pages = {297--347},
 	number = {3},
-	journaltitle = {Journal of Logic and Computation},
+	journal = {Journal of Logic and Computation},
 	author = {Andreoli, Jean-Mark},
 	urldate = {2021-08-23},
-	date = {1992-06-01},
+	year = {1992},
 	file = {Snapshot:/Users/wanchengsyuan/Zotero/storage/LGTCIBYK/1012743.html:text/html;ANDREOLI - 1992 - Logic Programming with Focusing Proofs in Linear L.pdf:/Users/wanchengsyuan/Zotero/storage/KY9UC2C7/ANDREOLI - 1992 - Logic Programming with Focusing Proofs in Linear L.pdf:application/pdf}
 }
 
@@ -916,10 +920,10 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	abstract = {We study Quillen model categories equipped with a monoidal skew closed structure that descends to a genuine monoidal closed structure on the homotopy category. Our examples are 2-categorical and include permutative categories and bicategories. Using the skew framework, we adapt Eilenberg and Kelly’s theorem relating monoidal and closed structure to the homotopical setting. This is applied to the construction of monoidal bicategories arising from the pseudo-commutative 2-monads of Hyland and Power.},
 	pages = {31--81},
 	number = {1},
-	journaltitle = {J. Homotopy Relat. Struct.},
+	journal = {Journal of Homotopy and Related Structures},
 	author = {Bourke, John},
 	urldate = {2021-09-28},
-	date = {2017-03-01},
+	year = {2017},
 	langid = {english},
 	file = {Bourke - 2017 - Skew structures in 2-category theory and homotopy .pdf:/Users/wanchengsyuan/Zotero/storage/5FQBHVJ4/Bourke - 2017 - Skew structures in 2-category theory and homotopy .pdf:application/pdf}
 }
@@ -936,7 +940,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	publisher = {Springer International Publishing},
 	author = {Veltri, Niccol{\`o}},
 	editor = {Silva, Alexandra and Wassermann, Renata and de Queiroz, Ruy},
-	date = {2021},
+	year = {2021},
 	langid = {english},
 	keywords = {Agda, Coherence, Focused sequent calculus, Substructural logic, Symmetric skew monoidal categories},
 	file = {Springer Full Text PDF:/Users/wanchengsyuan/Zotero/storage/8FPFBXZ6/Veltri - 2021 - Coherence via Focusing for Symmetric Skew Monoidal.pdf:application/pdf}
@@ -967,10 +971,10 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	doi = {10.1016/j.jalgebra.2018.02.039},
 	abstract = {We describe a perfect correspondence between skew monoidal categories and certain generalised multicategories, called skew multicategories, that arise in nature.},
 	pages = {237--266},
-	journaltitle = {Journal of Algebra},
+	journal = {Journal of Algebra},
 	author = {Bourke, John and Lack, Stephen},
 	urldate = {2021-10-25},
-	date = {2018-07-15},
+	year = {2018},
 	langid = {english},
 	keywords = {Multicategory, Operad, Skew monoidal category},
 	file = {Submitted Version:/Users/wanchengsyuan/Zotero/storage/M5VLYTUI/Bourke and Lack - 2018 - Skew monoidal categories and skew multicategories.pdf:application/pdf}
@@ -980,15 +984,14 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	title = {The Catalan simplicial set},
 	volume = {158},
 	issn = {0305-0041, 1469-8064},
-	url = {https://www.cambridge.org/core/journals/mathematical-proceedings-of-the-cambridge-philosophical-society/article/catalan-simplicial-set/7340716969F921F6A98AF871525F12AB},
 	doi = {10.1017/S0305004114000498},
 	abstract = {The Catalan numbers are well known to be the answer to many different counting problems, and so there are many different families of sets whose cardinalities are the Catalan numbers. We show how such a family can be given the structure of a simplicial set. We show how the low-dimensional parts of this simplicial set classify, in a precise sense, the structures of monoid and of monoidal category. This involves aspects of combinatorics, algebraic topology, quantum groups, logic, and category theory.},
 	pages = {211--222},
 	number = {2},
-	journaltitle = {Mathematical Proceedings of the Cambridge Philosophical Society},
+	journal = {Mathematical Proceedings of the Cambridge Philosophical Society},
 	author = {Buckley, Mitchell and Garner, Richard and Lack, Stephen and Street, Ross},
 	urldate = {2021-10-25},
-	date = {2015-03},
+	year = {2015},
 	langid = {english},
 	note = {Publisher: Cambridge University Press},
 	file = {Full Text PDF:/Users/wanchengsyuan/Zotero/storage/C5M6B5AB/Buckley et al. - 2015 - The Catalan simplicial set.pdf:application/pdf;Snapshot:/Users/wanchengsyuan/Zotero/storage/CRUM2ANY/7340716969F921F6A98AF871525F12AB.html:text/html}
@@ -1000,12 +1003,10 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	url = {http://arxiv.org/abs/1205.0074},
 	abstract = {Kornel Szlach{\textbackslash}'anyi recently used the term skew-monoidal category for a particular laxified version of monoidal category. He showed that bialgebroids \$H\$ with base ring \$R\$ could be characterized in terms of skew-monoidal structures on the category of one-sided \$R\$-modules for which the lax unit was \$R\$ itself. We define skew monoidales (or skew pseudo-monoids) in any monoidal bicategory \${\textbackslash}mathscr M\$. These are skew-monoidal categories when \${\textbackslash}mathscr M\$ is \${\textbackslash}mathrm\{Cat\}\$. Our main results are presented at the level of monoidal bicategories. However, a consequence is that quantum categories in the sense of Day-Street with base comonoid \$C\$ in a suitably complete braided monoidal category \${\textbackslash}mathscr V\$ are precisely skew monoidales in \${\textbackslash}mathrm\{Comod\} ({\textbackslash}mathscr V)\$ with unit coming from the counit of \$C\$. Quantum groupoids are those skew monoidales with invertible associativity constraint. In fact, we provide some very general results connecting opmonoidal monads and skew monoidales. We use a lax version of the concept of warping defined recently by Booker-Street to modify monoidal structures.},
 	pages = {385--402},
-	journaltitle = {Theory and Applications of Categories},
+	journal = {Theory and Applications of Categories},
 	author = {Lack, Stephen and Street, Ross},
 	urldate = {2021-10-25},
-	date = {2012-09-04},
-	eprinttype = {arxiv},
-	eprint = {1205.0074},
+	year = {2012},
 	keywords = {Mathematics - Category Theory, Mathematics - Quantum Algebra},
 	annotation = {Comment: Minor changes and some renumbering in this version},
 	file = {arXiv Fulltext PDF:/Users/wanchengsyuan/Zotero/storage/G8PKDGQC/Lack and Street - 2012 - Skew monoidales, skew warpings and quantum categor.pdf:application/pdf;arXiv.org Snapshot:/Users/wanchengsyuan/Zotero/storage/BW4NAH3L/1205.html:text/html}
@@ -1025,7 +1026,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 @article{zeilberger:semiassociative:19,
   author    = {Noam Zeilberger},
   title     = {A sequent calculus for a semi-associative law},
-  journal   = {Log. Methods Comput. Sci.},
+  journal   = {Logical Methods in Computer Science},
   volume    = {15},
   number    = {1},
   year      = {2019},
@@ -1036,7 +1037,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 @article{girard:constructive:91,
   author    = {Jean{-}Yves Girard},
   title     = {A New Constructive Logic: Classical Logic},
-  journal   = {Math. Struct. Comput. Sci.},
+  journal   = {Mathematical structures in computer science},
   volume    = {1},
   number    = {3},
   pages     = {255--296},
